# GemPilot

./: .env.example  .env.openclaw.example  .gitignore  E2E_TESTING_REPORT.md  MVPilot_README.md  README.md  REPO_CLEANUP_REPORT.md  TESTING_REPORT.md  final-team-split.md  package-lock.json  package.json  person3-tool-verification-tasks.md  pyproject.toml  requirements.txt
agent/: __init__.py  adapters.py  adaptive_validation.py  architecture_planner.py  build_timeline.py  code_generator.py  config.py  dependencies.py  frontend_intake.py  generated_project.py  generation_logging.py  github_oauth.py  idea_aware_partial.py  idea_context.py  live_adapters.py  main.py  model_client.py  model_outputs.py  mvp_depth.py  mvp_validation.py  openclaw_orchestrator.py  openclaw_runtime.py  orchestration_pipeline.py  orchestrator.py  project_agents.py  project_classifier.py  project_depth.py  project_generation.py  project_plan.py  project_session_store.py  project_validation.py  prompts.py  schemas.py  service.py  stack_recommendation.py  task_store.py  validate_project.py  workflow.py
docs/: MVPilot_README.md  adaptive_generation_audit.md  enterprise_agent_architecture_template.md  final-team-split.md  tech-stack.md
frontend/: package-lock.json  package.json
logs/: build_log.md
rag/: README.md  scrape_urls.txt
scripts/: poll_task.py  test_person3_flow.py  test_provider_fallbacks.py
supabase/: config.toml  seed.sql
tests/: conftest.py  test_adaptive_validation.py  test_agent_api.py  test_architecture_planner.py  test_bottleneck_fixes.py  test_code_generator.py  (+39 more)
(+57 files in other folders)
