[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mvpilot-agent"
version = "0.1.0"
description = "FastAPI backend scaffold for the MVPilot autonomous agent."
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "httpx",
    "beautifulsoup4",
    "langgraph",
    "supabase",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "respx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--cov=agent",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]

[tool.setuptools.packages.find]
include = ["agent*", "tools*"]
